[package]
name = "aeron-client"
version = "0.1.7"
license = "Apache-2.0"
description = "Aeron client library — fast messaging over UDP on Rust"
readme = "README.md"
repository = "https://github.com/sheophe/aeron-client"
edition = "2021"

[dependencies]
thiserror = "1.0"
cache_line_size = "1.0"
num-traits = "0.2"
lazy_static = "1.4"
memmap2 = "0.5.8"
rand = "0.6"
nix = "0.17"
ctrlc = "3.1"
log = "0.4"
pretty_env_logger = "0.4"
galvanic-assert = "0.8"
chrono = "0.4"
memoffset = "0.6.4"

[dev-dependencies]
tempfile = "3.1"
hdrhistogram = "6.0"
structopt = "0.3"
